# muser-SDL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  vscode.code-workspace
include/: embedded_resource.hpp  event.hpp  event_controller.hpp  logger.hpp  preference.hpp  resource.hpp  resource_manager.hpp  sprite.hpp  toml.hpp  util.hpp  windows.hpp
res/pref/: main.toml  sprites.toml
src/: embedded_resource.cpp  event.cpp  event_controller.cpp  logger.cpp  main.cpp  preference.cpp  resource.cpp  resource_manager.cpp  sprite.cpp  util.cpp  windows.cpp
